terraform/security_group_public_from_nat.tf
resource "aws_security_group" "security_group_public_from_nat" {
  vpc_id = aws_vpc.main.id

  # ingress {
  #   from_port   = 0
  #   to_port     = 65535
  #   protocol    = "tcp"
  #   cidr_blocks = ["10.0.0.0/16"]
  # }
  #
  # ingress {
  #   from_port   = 0
  #   to_port     = 65535
  #   protocol    = "udp"
  #   cidr_blocks = ["10.0.0.0/16"]
  # }
  #
  # ingress {
  #   from_port   = -1
  #   to_port     = -1
  #   protocol    = "icmp"
  #   cidr_blocks = ["10.0.0.0/16"]
  # }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "security_group_public_from_nat"
  }
}
